:sparkles: make recommend logic